--- a/bocoran-pola-pusat-mahjong-ways-2-biar-menang-bukan-cuma-ngarep.html
+++ b/bocoran-pola-pusat-mahjong-ways-2-biar-menang-bukan-cuma-ngarep.html
@@ -22,7 +22,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes"/>
         <meta name="mobile-web-app-capable" content="yes" /> 
         <link rel="shortcut icon" href="https://julyang-images.cloud/uploads/logo-dc/logo.jpg">
-        <link rel="preload" as="image" href="https://powerimages.pro/uploads/ayana/dewata.png">
+        <link rel="preload" as="image" href="https://powerimages.pro/uploads/aboy/CKUIT5.gif">
         <link rel="preload" as="image" href="https://powerimages.pro/uploads/ayana/bocoran-pola-pusat-mahjong-ways-2-biar-menang-bukan-cuma-ngarep.webp">
         <!-- OG:FACEBOOK -->
         <meta property="og:locale" content="id_ID" />
@@ -74,7 +74,7 @@
                "name": "AyanaNews",
                "logo": {
                  "@type": "ImageObject",
-                 "url": "https://powerimages.pro/uploads/ayana/dewata.png"
+                 "url": "https://powerimages.pro/uploads/aboy/CKUIT5.gif"
                }
              },
              "description": "Penasaran dengan rahasia sukses bermain mahjong? Simak bukti nyata bocoran pola di sini!"
@@ -86,7 +86,7 @@
     <div class="header-wrapper">
         <div class="logo">
             <a href="https://xmax-news.github.io/news/bocoran-pola-pusat-mahjong-ways-2-biar-menang-bukan-cuma-ngarep.html">
-                <amp-img src="https://powerimages.pro/uploads/ayana/dewata.png" width="300" height="70" alt="AyanaNews" layout="fixed"></amp-img>
+                <amp-img src="https://powerimages.pro/uploads/aboy/CKUIT5.gif" width="300" height="70" alt="AyanaNews" layout="fixed"></amp-img>
             </a>
         </div>
     </div>
@@ -94,14 +94,14 @@
 <section class="content">
     <div class="container">
         <div class="uwoghhh-teks-berjalan-coy" style="background-color: #000; padding: 5px 0; border: 2px solid #ffae00; border-radius: 1px;margin-bottom: 5px;">
-            <div class="ayana">SITUS RESMI - DEWATA88 OFFICIAL</div>
+            <div class="ayana">SITUS RESMI - VIRGOBE88 OFFICIAL</div>
           </div>
         <div class="thumbs">
             <amp-img style="padding: 5px 0; border: 2px solid #ffae00; border-radius: 5px;margin-bottom: 5px;" src="https://powerimages.pro/uploads/ayana/bocoran-pola-pusat-mahjong-ways-2-biar-menang-bukan-cuma-ngarep.webp" width="940" height="529" alt="AyanaNews" layout="responsive"></amp-img>
         </div>
         <div class="btn-body">
-        <a href="https://rebrand.ly/link-super-dewata" rel="nofollow" class="tombol-ayachi">Daftar Akun</a>
-        <a href="https://rebrand.ly/link-super-dewata" rel="nofollow" class="tombol-ayachi">Login Akun</a>
+        <a href="https://rebrand.ly/link-super-virgo" rel="nofollow" class="tombol-ayachi">Daftar Akun</a>
+        <a href="https://rebrand.ly/link-super-virgo" rel="nofollow" class="tombol-ayachi">Login Akun</a>
          </div>
          <table style="background: linear-gradient(28.1deg, rgb(0, 0, 0) 11.4%, rgb(96, 63, 14) 70.2%);" class="styled-table">           
             <tbody>
@@ -110,7 +110,7 @@
                 </tr>
                 <tr>
                     <td style="color: #000;">Nama Situs</td>
-                    <td style="color: #000;">DEWATA88</td>
+                    <td style="color: #000;">VIRGOBE88</td>
                 </tr>
                 <tr>
                     <td style="color: #ffae00;">Pengembang</td>
@@ -172,15 +172,15 @@
 </footer>
 <div class="nav">
     <div class="menu">
-        <a href="https://rebrand.ly/link-super-dewata" rel="nofollow noopener">
+        <a href="https://rebrand.ly/link-super-virgo" rel="nofollow noopener">
             <amp-img layout="intrinsic" height="100" width="100" src="https://powerimages.pro/uploads/ayana/441a9b1c-2b7f-4c6c-9577-4b52d843aba6-(1).webp"></amp-img>
             WhatsApp
         </a>
-        <a href="https://rebrand.ly/link-super-dewata" rel="nofollow noopener" class="tada" target="_blank">
+        <a href="https://rebrand.ly/link-super-virgo" rel="nofollow noopener" class="tada" target="_blank">
             <amp-img class="center" layout="intrinsic" height="120" width="120" src="https://powerimages.pro/uploads/ayana/9f58161c-c9b9-4f0e-85b8-75ee55a7be46.webp"></amp-img>
             LiveChat
         </a>
-        <a href="https://rebrand.ly/link-super-dewata" rel="nofollow noopener" target="_blank">
+        <a href="https://rebrand.ly/link-super-virgo" rel="nofollow noopener" target="_blank">
             <amp-img layout="intrinsic" height="100" width="100" src="https://powerimages.pro/uploads/ayana/779ed782-8f35-4070-9834-e738941005e9.webp"></amp-img>
             Telegram
         </a>
